Add JEI dependency & plugin

--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -26,6 +26,7 @@ repositories {
 	maven { url 'https://modmaven.dev/' }
 	maven { url 'https://maven.covers1624.net/' }
 	maven { url 'https://maven.shedaniel.me' }
+	maven { url 'https://maven.blamejared.com/' }
 
 	maven {
 		url 'https://www.cursemaven.com'
