--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ APEXCORE_VERSION=8.0.0
 APEXCORE_VERSION_RANGE=[8.0.0,9.0.0)
 
 # Recipe lookup mods | Only 1 should be loaded at a runtime
-#JEI_VERSION=???
+JEI_VERSION=12.0.2.2
 REI_VERSION=10.0.581
 EMI_VERSION=0.5.3
 # jei | rei | emi
