Update to new ApexStudios Maven URL

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -165,13 +165,12 @@ publishing {
 			from components.java
 		}
 	}
-	repositories {
-		maven { url "file:///${rootProject.projectDir}/maven" }
 
+	repositories {
 		if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS_MAVEN_PASSWORD') != null) {
 			maven {
-				name 'ApexMods-Maven'
-				url 'https://apexmodder.jfrog.io/artifactory/mods-maven/'
+				name 'ApexStudios-Maven'
+				url 'https://maven.apexstudios.dev'
 
 				credentials {
 					username System.getenv('APEX_MODS_MAVEN_USERNAME')
