--- a/build.gradle
+++ b/build.gradle
@@ -147,7 +147,7 @@ repositories {
 	mavenLocal()
 	maven { url 'https://dvs1.progwml6.com/files/maven' }
 	maven { url 'https://maven.tterrag.com/' }
-	maven { url 'https://maven.apexstudios.dev/' }
+	maven { url 'https://maven.covers1624.net/' }
 	maven { url 'https://maven.blamejared.com/' }
 
 	maven {
@@ -266,17 +266,17 @@ publishing {
 	}
 
 	repositories {
-		if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS_MAVEN_PASSWORD') != null) {
-			maven {
-				name 'ApexStudios-Maven'
-				url 'https://maven.apexstudios.dev'
+		if(System.getenv('MAVEN_PASSWORD') != null) {
+            maven {
+                name 'Covers1624-Maven'
+                url 'https://nexus.covers1624.net/repository/apex-releases/'
 
-				credentials {
-					username System.getenv('APEX_MODS_MAVEN_USERNAME')
-					password System.getenv('APEX_MODS_MAVEN_PASSWORD')
-				}
-			}
-		}
+                credentials {
+                    username 'apex'
+                    password System.getenv('MAVEN_PASSWORD')
+                }
+            }
+        }
 	}
 }
 
