--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,13 @@ subprojects {
     version = "${MOD_VERSION}+${MINECRAFT_VERSION}"
     archivesBaseName = "${MOD_ID}-${project.name}"
 
-    sourceSets.test {
-        java.srcDirs = [ ]
-        resources.srcDirs = [ ]
+    sourceSets {
+        main.resources.srcDirs = [ 'src/main/resources', 'src/main/generated' ]
+
+        test {
+            java.srcDirs = [ ]
+            resources.srcDirs = [ ]
+        }
     }
 
     repositories {
