--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,24 @@ plugins {
 	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 	id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1'
 	id 'com.palantir.git-version' version '1.0.0'
+	id 'com.modrinth.minotaur' version '2.+'
+	id 'com.matthewprenger.cursegradle' version '1.4.0'
+	id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.78.0'
 }
 
 def repo = versionDetails()
+
+def previousGitTag = { ->
+	def stdout = new ByteArrayOutputStream()
+
+	exec {
+		commandLine 'git', 'describe', '--tags', '--abbrev=0', '--exclude', "${repo.lastTag}"
+		standardOutput = stdout
+	}
+
+	return stdout.toString()
+}
+
 version = "${repo.lastTag.substring(1)}.${repo.commitDistance}"
 group = "${mod_base_package}"
 archivesBaseName = "${mod_id}-${minecraft_version}"
@@ -202,7 +217,8 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Jar) {
-	from file('.github/CHANGELOG.md')
+	dependsOn gitChangelog
+	from file('CHANGELOG.md')
 	from file('LICENSE')
 
 	manifest {
@@ -279,6 +295,64 @@ publishing {
                 }
             }
         }
+	}
+}
+
+gitChangelog {
+	fromRef = "${previousGitTag}"
+	templateContent = """{{#tags}}
+## {{name}}
+{{#commits}}
+**{{{messageTitle}}}** ([{{authorName}}](https://github.com/{{ownerName}}/{{repoName}}/commit/{{hash}}))
+
+{{#messageBodyItems}}
+* {{.}}
+{{/messageBodyItems}}
+{{/commits}}
+
+{{/tags}}"""
+}
+
+if(System.getenv('CURSEFORGE_TOKEN') != null) {
+	curseforge {
+		apiKey = System.getenv('CURSEFORGE_TOKEN')
+
+		project {
+			id = "${mod_curseforge_id}"
+			releaseType = "${mod_release_type}"
+			addGameVersion "${minecraft_version}"
+
+			mainArtifact(tasks.jarJar) {
+				changelog = file('CHANGELOG.md')
+				changelogType = 'markdown'
+			}
+
+			addArtifact jar
+			addArtifact sourcesJar
+		}
+
+		options {
+			debug = true
+		}
+	}
+}
+
+if(System.getenv('MODRINTH_TOKEN') != null) {
+	modrinth {
+		token = System.getenv('MODRINTH_TOKEN')
+		projectId = "${mod_modrinth_id}"
+		versionNumber = "${version}"
+		versionType = "${mod_release_type}"
+		versionName = "${mod_name} - v${version} for Minecraft ${minecraft_version}"
+		changelog = file('CHANGELOG.md').text
+		uploadFile = tasks.jarJar
+		additionalFiles = [ jar, sourcesJar ]
+		gameVersions = [ "${minecraft_version}" ]
+		loaders = [ 'forge' ]
+		debugMode = true
+		dependencies {
+
+		}
 	}
 }
 
