--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,12 @@
 mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
+mod_color=0x97C6E7
 mod_base_package=xyz.apex.forge
 mod_release_type=release
 mod_curseforge_id=579564
+mod_curseforge_slug=fantasys-furniture
 mod_modrinth_id=A0nfCqYw
+mod_modrinth_slug=fantasy-furniture
 
 minecraft_version=1.19.3
 forge_version=44.1.16
