--- a/gradle.properties
+++ b/gradle.properties
@@ -1,52 +1,46 @@
 MOD_ID=fantasyfurniture
 MOD_NAME=Fantasy's Furniture
-MOD_VERSION=7.0.0
+MOD_VERSION=8.0.0
 MOD_DESCRIPTION=Adds Fantasy-Themed Furniture & Decorational blocks to the game
 MOD_LICENSE=GNU General Public License v3.0
 MOD_GROUP=xyz.apex.minecraft.fantasyfurniture
 
-MINECRAFT_VERSION=1.19.3
-MINECRAFT_FORGE_VERSION_RANGE=[1.19.3,1.19.4)
+MINECRAFT_VERSION=1.19.4
+MINECRAFT_FORGE_VERSION_RANGE=[1.19.4,1.20)
 
 JAVA_VERSION=17
 MIXIN_VERSION=0.8.4
 
-# Uncomment when parchment is using cross version mappings
-# PARCHMENT_MINECRAFT_VERSION=1.19.3
-PARCHMENT_MAPPINGS=2022.12.18
+PARCHMENT_MINECRAFT_VERSION=1.19.3
+PARCHMENT_MAPPINGS=2023.03.12
 
-FORGE_LOADER_VERSION=44
-FORGE_VERSION=44.0.30
-FORGE_VERSION_RANGE=[44.0.6,45.0.0)
+FORGE_LOADER_VERSION=45
+FORGE_VERSION=45.0.6
+FORGE_VERSION_RANGE=[45.0.0,46.0.0)
 
-FABRIC_LOADER_VERSION=0.14.11
-FABRIC_API_VERSION=0.72.0
+FABRIC_LOADER_VERSION=0.14.17
+FABRIC_API_VERSION=0.76.0
 
-# Quilt support is WIP & is wonky at best of times
-# QUILT_LOADER_VERSION=0.18.1-beta.58
-# QUILT_LIB_VERSION=4.0.0-beta.6
-# QUILT_FAPI_VERSION=5.0.0-alpha.9
+ARCHITECTURY_DEV_VERSION=8.1.73
+ARCHITECTURY_PROD_VERSION=8.0.0
+ARCHITECTURY_FORGE_VERSION_RANGE=[8.0.0,9.0.0)
 
-ARCHITECTURY_DEV_VERSION=7.0.66
-ARCHITECTURY_PROD_VERSION=7.0.0
-ARCHITECTURY_FORGE_VERSION_RANGE=[7.0.0,8.0.0)
+APEXCORE_DEV_VERSION=9.0.1
+APEXCORE_PROD_VERSION=9.0.0
+APEXCORE_FORGE_VERSION_RANGE=[9.0.0,8.0.0)
 
-APEXCORE_DEV_VERSION=8.8.0
-APEXCORE_PROD_VERSION=8.0.0
-APEXCORE_FORGE_VERSION_RANGE=[8.0.0,9.0.0)
+#JEI_DEV_VERSION=12.0.2.2
+#JEI_PROD_VERSION=12.0.0.0
+#JEI_FORGE_VERSION_RANGE=[12.0.0.0,13.0.0.0)
 
-JEI_DEV_VERSION=12.0.2.2
-JEI_PROD_VERSION=12.0.0.0
-JEI_FORGE_VERSION_RANGE=[12.0.0.0,13.0.0.0)
+#REI_DEV_VERSION=10.0.581
+#REI_PROD_VERSION=10.0.0
+#REI_FORGE_VERSION_RANGE=[10.0.0,11.0.0)
 
-REI_DEV_VERSION=10.0.581
-REI_PROD_VERSION=10.0.0
-REI_FORGE_VERSION_RANGE=[10.0.0,11.0.0)
+#EMI_DEV_VERSION=0.5.3
+#EMI_PROD_VERSION=0.5.0
 
-EMI_DEV_VERSION=0.5.3
-EMI_PROD_VERSION=0.5.0
+#RECIPE_LOOKUP_INCLUDE=jei
 
-RECIPE_LOOKUP_INCLUDE=jei
-
-MOD_MENU_DEV_VERSION=5.0.1
-LAZY_DFU_DEV_VERSION=0.1.3
+#MOD_MENU_DEV_VERSION=5.0.1
+#LAZY_DFU_DEV_VERSION=0.1.3
