--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -9,45 +9,45 @@ dependencies {
 	//runtimeOnly 'io.github.douira:glsl-transformer:2.0.0-pre8'
 	//runtimeOnly 'org.anarres:jcpp:1.4.14'
 
-	modRuntimeOnly "maven.modrinth:lazydfu:${LAZY_DFU_DEV_VERSION}"
+//	modRuntimeOnly "maven.modrinth:lazydfu:${LAZY_DFU_DEV_VERSION}"
 
-	modRuntimeOnly("com.terraformersmc:modmenu:${MOD_MENU_DEV_VERSION}") {
-		exclude group: 'net.fabricmc'
-		exclude group: 'net.fabricmc.fabric-api'
-	}
+//	modRuntimeOnly("com.terraformersmc:modmenu:${MOD_MENU_DEV_VERSION}") {
+//		exclude group: 'net.fabricmc'
+//		exclude group: 'net.fabricmc.fabric-api'
+//	}
 
-	modCompileOnlyApi "mezz.jei:jei-${MINECRAFT_VERSION}-fabric-api:${JEI_DEV_VERSION}"
-	modCompileOnlyApi "dev.emi:emi:${EMI_DEV_VERSION}+${MINECRAFT_VERSION}"
+//	modCompileOnlyApi "mezz.jei:jei-${MINECRAFT_VERSION}-fabric-api:${JEI_DEV_VERSION}"
+//	modCompileOnlyApi "dev.emi:emi:${EMI_DEV_VERSION}+${MINECRAFT_VERSION}"
 
-	modCompileOnlyApi("me.shedaniel:RoughlyEnoughItems-api-fabric:${REI_DEV_VERSION}") {
-		exclude group: 'me.shedaniel.cloth'
-		exclude group: 'me.shedaniel', module: 'error-notifier-fabric'
-		exclude group: 'net.fabricmc'
-		exclude group: 'net.fabricmc.fabric-api'
-	}
+//	modCompileOnlyApi("me.shedaniel:RoughlyEnoughItems-api-fabric:${REI_DEV_VERSION}") {
+//		exclude group: 'me.shedaniel.cloth'
+//		exclude group: 'me.shedaniel', module: 'error-notifier-fabric'
+//		exclude group: 'net.fabricmc'
+//		exclude group: 'net.fabricmc.fabric-api'
+//	}
 
-	modCompileOnlyApi("me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${REI_DEV_VERSION}") {
-		exclude group: 'me.shedaniel.cloth'
-		exclude group: 'me.shedaniel', module: 'error-notifier-fabric'
-		exclude group: 'net.fabricmc'
-		exclude group: 'net.fabricmc.fabric-api'
-	}
+//	modCompileOnlyApi("me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${REI_DEV_VERSION}") {
+//		exclude group: 'me.shedaniel.cloth'
+//		exclude group: 'me.shedaniel', module: 'error-notifier-fabric'
+//		exclude group: 'net.fabricmc'
+//		exclude group: 'net.fabricmc.fabric-api'
+//	}
 
-	def recipeLookupIncludeType = rootProject.findProperty('RECIPE_LOOKUP_INCLUDE')
+//	def recipeLookupIncludeType = rootProject.findProperty('RECIPE_LOOKUP_INCLUDE')
 
-	if(recipeLookupIncludeType == 'jei') {
-		modRuntimeOnly "mezz.jei:jei-${MINECRAFT_VERSION}-fabric:${JEI_DEV_VERSION}"
-	} else if(recipeLookupIncludeType == 'rei') {
-		modRuntimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:${REI_DEV_VERSION}") {
-			exclude group: 'me.shedaniel.cloth'
-			exclude group: 'me.shedaniel', module: 'error-notifier-fabric'
-			exclude group: 'net.fabricmc'
-			exclude group: 'net.fabricmc.fabric-api'
-		}
-	} else if(recipeLookupIncludeType == 'emi') {
-		modRuntimeOnly "dev.emi:emi:${EMI_VERSION}+${MINECRAFT_VERSION}"
-	}
+//	if(recipeLookupIncludeType == 'jei') {
+//		modRuntimeOnly "mezz.jei:jei-${MINECRAFT_VERSION}-fabric:${JEI_DEV_VERSION}"
+//	} else if(recipeLookupIncludeType == 'rei') {
+//		modRuntimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:${REI_DEV_VERSION}") {
+//			exclude group: 'me.shedaniel.cloth'
+//			exclude group: 'me.shedaniel', module: 'error-notifier-fabric'
+//			exclude group: 'net.fabricmc'
+//			exclude group: 'net.fabricmc.fabric-api'
+//		}
+//	} else if(recipeLookupIncludeType == 'emi') {
+//		modRuntimeOnly "dev.emi:emi:${EMI_VERSION}+${MINECRAFT_VERSION}"
+//	}
 
 	// excluded from rei & re-added to be runtime only
-	modRuntimeOnly 'me.shedaniel.cloth:cloth-config:9.0.94'
+//	modRuntimeOnly 'me.shedaniel.cloth:cloth-config:9.0.94'
 }
