--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -14,37 +14,27 @@ issueTrackerURL="https://discord.apexstudios.dev/"
     authors="ApexStudios"
     description="${MOD_DESCRIPTION}"
 
-[[dependencies.${MOD_ID}]]
+[[dependencies."${MOD_ID}"]]
 	modId="forge"
 	mandatory=true
 	versionRange="${FORGE_VERSION_RANGE}"
 	ordering="AFTER"
 	side="BOTH"
-	[dependencies.${MOD_ID}.custom.mc-publish]
-		ignore=true
-[[dependencies.${MOD_ID}]]
+[[dependencies."${MOD_ID}"]]
 	modId="minecraft"
 	mandatory=true
 	versionRange="${MINECRAFT_FORGE_VERSION_RANGE}"
 	ordering="AFTER"
 	side="BOTH"
-	[dependencies.${MOD_ID}.custom.mc-publish]
-		ignore=true
-[[dependencies.${MOD_ID}]]
+[[dependencies."${MOD_ID}"]]
 	modId="architectury"
 	mandatory=true
 	versionRange="${ARCHITECTURY_FORGE_VERSION_RANGE}"
 	ordering="AFTER"
 	side="BOTH"
-	[dependencies.${MOD_ID}.custom.mc-publish]
-		modrinth="architectury-api"
-		curseforge="architectury-api"
-[[dependencies.${MOD_ID}]]
+[[dependencies."${MOD_ID}"]]
 	modId="apexcore"
 	mandatory=true
 	versionRange="${APEXCORE_FORGE_VERSION_RANGE}"
 	ordering="AFTER"
 	side="BOTH"
-	[dependencies.${MOD_ID}.custom.mc-publish]
-		modrinth="apexcore"
-		curseforge="apexcore"
