--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,7 @@ pluginManagement {
 }
 
 include 'common'
-include 'forge'
+//include 'forge'
 include 'fabric'
 
 rootProject.name = "FantasyFurniture-${MINECRAFT_VERSION}"
