--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -15,3 +15,21 @@ public net.minecraft.world.level.block.BedBlock m_49533_(Lnet/minecraft/world/le
 
 # custom block flammability
 public net.minecraft.world.level.block.FireBlock m_53444_(Lnet/minecraft/world/level/block/Block;II)V # setFlammable
+
+# creative mode tabs
+public net.minecraft.world.item.CreativeModeTab$Output
+public net.minecraft.world.item.CreativeModeTab$ItemDisplayBuilder
+public net.minecraft.world.item.CreativeModeTabs f_256788_ # BUILDING_BLOCKS
+public net.minecraft.world.item.CreativeModeTabs f_256725_ # COLORED_BLOCKS
+public net.minecraft.world.item.CreativeModeTabs f_256776_ # NATURAL_BLOCKS
+public net.minecraft.world.item.CreativeModeTabs f_256791_ # FUNCTIONAL_BLOCKS
+public net.minecraft.world.item.CreativeModeTabs f_257028_ # REDSTONE_BLOCKS
+public net.minecraft.world.item.CreativeModeTabs f_256917_ # HOTBAR
+public net.minecraft.world.item.CreativeModeTabs f_256750_ # SEARCH
+public net.minecraft.world.item.CreativeModeTabs f_256869_ # TOOLS_AND_UTILITIES
+public net.minecraft.world.item.CreativeModeTabs f_256797_ # COMBAT
+public net.minecraft.world.item.CreativeModeTabs f_256839_ # FOOD_AND_DRINKS
+public net.minecraft.world.item.CreativeModeTabs f_256968_ # INGREDIENTS
+public net.minecraft.world.item.CreativeModeTabs f_256731_ # SPAWN_EGGS
+public net.minecraft.world.item.CreativeModeTabs f_256837_ # OP_BLOCKS
+public net.minecraft.world.item.CreativeModeTabs f_257039_ # INVENTORY
