Add custom creative tabs for each furniture set Update access transformer & widener to be inline with apexcore

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,8 +1,13 @@
 public net.minecraft.world.level.block.AbstractFurnaceBlock m_151987_(Lnet/minecraft/world/level/Level;Lnet/minecraft/world/level/block/entity/BlockEntityType;Lnet/minecraft/world/level/block/entity/BlockEntityType;)Lnet/minecraft/world/level/block/entity/BlockEntityTicker; # createFurnaceTicker
+public net.minecraft.world.entity.Entity m_19956_(Lnet/minecraft/world/entity/Entity;Lnet/minecraft/world/entity/Entity$MoveFunction;)V # positionRider
 
 ##################################
 # Copied from ApexCore
 ##################################
+# custom home poi types
+public-f net.minecraft.world.entity.ai.village.poi.PoiTypes f_218068_ # BEDS
+public net.minecraft.world.entity.ai.village.poi.PoiTypes m_218073_(Lnet/minecraft/world/level/block/Block;)Ljava/util/Set; # getBlockStates
+
 # made public for registry entries
 public net.minecraft.world.level.block.entity.BlockEntityType$BlockEntitySupplier
 public net.minecraft.world.inventory.MenuType$MenuSupplier
