--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -38,3 +38,113 @@ public net.minecraft.world.item.CreativeModeTabs f_256968_ # INGREDIENTS
 public net.minecraft.world.item.CreativeModeTabs f_256731_ # SPAWN_EGGS
 public net.minecraft.world.item.CreativeModeTabs f_256837_ # OP_BLOCKS
 public net.minecraft.world.item.CreativeModeTabs f_257039_ # INVENTORY
+
+# custom render types
+public net.minecraft.client.renderer.RenderType m_173209_(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;ILnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType; # create
+public net.minecraft.client.renderer.RenderType m_173215_(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;IZZLnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType; # create
+public net.minecraft.client.renderer.RenderType$CompositeState
+public net.minecraft.client.renderer.RenderType$CompositeRenderType
+public net.minecraft.client.renderer.RenderType$OutlineProperty
+public net.minecraft.client.renderer.RenderStateShard f_173089_ # VIEW_SCALE_Z_EPSILON
+public net.minecraft.client.renderer.RenderStateShard f_110134_ # NO_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_110135_ # ADDITIVE_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_110136_ # LIGHTNING_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_110137_ # GLINT_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_110138_ # CRUMBLING_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_110139_ # TRANSLUCENT_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_173096_ # NO_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173097_ # BLOCK_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173098_ # NEW_ENTITY_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173099_ # POSITION_COLOR_LIGHTMAP_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173100_ # POSITION_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173101_ # POSITION_COLOR_TEX_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173102_ # POSITION_TEX_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173103_ # POSITION_COLOR_TEX_LIGHTMAP_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173104_ # POSITION_COLOR_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173105_ # RENDERTYPE_SOLID_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173106_ # RENDERTYPE_CUTOUT_MIPPED_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173107_ # RENDERTYPE_CUTOUT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173108_ # RENDERTYPE_TRANSLUCENT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173109_ # RENDERTYPE_TRANSLUCENT_MOVING_BLOCK_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173110_ # RENDERTYPE_TRANSLUCENT_NO_CRUMBLING_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173111_ # RENDERTYPE_ARMOR_CUTOUT_NO_CULL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173112_ # RENDERTYPE_ENTITY_SOLID_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173113_ # RENDERTYPE_ENTITY_CUTOUT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173114_ # RENDERTYPE_ENTITY_CUTOUT_NO_CULL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173063_ # RENDERTYPE_ENTITY_CUTOUT_NO_CULL_Z_OFFSET_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173064_ # RENDERTYPE_ITEM_ENTITY_TRANSLUCENT_CULL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173065_ # RENDERTYPE_ENTITY_TRANSLUCENT_CULL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173066_ # RENDERTYPE_ENTITY_TRANSLUCENT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_234323_ # RENDERTYPE_ENTITY_TRANSLUCENT_EMISSIVE_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173067_ # RENDERTYPE_ENTITY_SMOOTH_CUTOUT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173068_ # RENDERTYPE_BEACON_BEAM_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173069_ # RENDERTYPE_ENTITY_DECAL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173070_ # RENDERTYPE_ENTITY_NO_OUTLINE_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173071_ # RENDERTYPE_ENTITY_SHADOW_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173072_ # RENDERTYPE_ENTITY_ALPHA_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173073_ # RENDERTYPE_EYES_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173074_ # RENDERTYPE_ENERGY_SWIRL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173075_ # RENDERTYPE_LEASH_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173076_ # RENDERTYPE_WATER_MASK_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173077_ # RENDERTYPE_OUTLINE_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173078_ # RENDERTYPE_ARMOR_GLINT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173079_ # RENDERTYPE_ARMOR_ENTITY_GLINT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173080_ # RENDERTYPE_GLINT_TRANSLUCENT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173081_ # RENDERTYPE_GLINT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173082_ # RENDERTYPE_GLINT_DIRECT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173083_ # RENDERTYPE_ENTITY_GLINT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173084_ # RENDERTYPE_ENTITY_GLINT_DIRECT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173085_ # RENDERTYPE_CRUMBLING_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173086_ # RENDERTYPE_TEXT_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173087_ # RENDERTYPE_TEXT_INTENSITY_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173088_ # RENDERTYPE_TEXT_SEE_THROUGH_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173090_ # RENDERTYPE_TEXT_INTENSITY_SEE_THROUGH_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173091_ # RENDERTYPE_LIGHTNING_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173092_ # RENDERTYPE_TRIPWIRE_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173093_ # RENDERTYPE_END_PORTAL_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173094_ # RENDERTYPE_END_GATEWAY_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_173095_ # RENDERTYPE_LINES_SHADER
+public net.minecraft.client.renderer.RenderStateShard f_110145_ # BLOCK_SHEET_MIPPED
+public net.minecraft.client.renderer.RenderStateShard f_110146_ # BLOCK_SHEET
+public net.minecraft.client.renderer.RenderStateShard f_110147_ # NO_TEXTURE
+public net.minecraft.client.renderer.RenderStateShard f_110148_ # DEFAULT_TEXTURING
+public net.minecraft.client.renderer.RenderStateShard f_110150_ # GLINT_TEXTURING
+public net.minecraft.client.renderer.RenderStateShard f_110151_ # ENTITY_GLINT_TEXTURING
+public net.minecraft.client.renderer.RenderStateShard f_110152_ # LIGHTMAP
+public net.minecraft.client.renderer.RenderStateShard f_110153_ # NO_LIGHTMAP
+public net.minecraft.client.renderer.RenderStateShard f_110154_ # OVERLAY
+public net.minecraft.client.renderer.RenderStateShard f_110155_ # NO_OVERLAY
+public net.minecraft.client.renderer.RenderStateShard f_110158_ # CULL
+public net.minecraft.client.renderer.RenderStateShard f_110110_ # NO_CULL
+public net.minecraft.client.renderer.RenderStateShard f_110111_ # NO_DEPTH_TEST
+public net.minecraft.client.renderer.RenderStateShard f_110112_ # EQUAL_DEPTH_TEST
+public net.minecraft.client.renderer.RenderStateShard f_110113_ # LEQUAL_DEPTH_TEST
+public net.minecraft.client.renderer.RenderStateShard f_110114_ # COLOR_DEPTH_WRITE
+public net.minecraft.client.renderer.RenderStateShard f_110115_ # COLOR_WRITE
+public net.minecraft.client.renderer.RenderStateShard f_110116_ # DEPTH_WRITE
+public net.minecraft.client.renderer.RenderStateShard f_110117_ # NO_LAYERING
+public net.minecraft.client.renderer.RenderStateShard f_110118_ # POLYGON_OFFSET_LAYERING
+public net.minecraft.client.renderer.RenderStateShard f_110119_ # VIEW_OFFSET_Z_LAYERING
+public net.minecraft.client.renderer.RenderStateShard f_110123_ # MAIN_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110124_ # OUTLINE_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110125_ # TRANSLUCENT_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110126_ # PARTICLES_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110127_ # WEATHER_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110128_ # CLOUDS_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110129_ # ITEM_ENTITY_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110130_ # DEFAULT_LINE
+public net.minecraft.client.renderer.RenderStateShard$TransparencyStateShard
+public net.minecraft.client.renderer.RenderStateShard$ShaderStateShard
+public net.minecraft.client.renderer.RenderStateShard$TextureStateShard
+public net.minecraft.client.renderer.RenderStateShard$EmptyTextureStateShard
+public net.minecraft.client.renderer.RenderStateShard$TexturingStateShard
+public net.minecraft.client.renderer.RenderStateShard$LightmapStateShard
+public net.minecraft.client.renderer.RenderStateShard$OverlayStateShard
+public net.minecraft.client.renderer.RenderStateShard$CullStateShard
+public net.minecraft.client.renderer.RenderStateShard$DepthTestStateShard
+public net.minecraft.client.renderer.RenderStateShard$WriteMaskStateShard
+public net.minecraft.client.renderer.RenderStateShard$LayeringStateShard
+public net.minecraft.client.renderer.RenderStateShard$OutputStateShard
+public net.minecraft.client.renderer.RenderStateShard$LineStateShard
+public net.minecraft.client.renderer.RenderStateShard$OffsetTexturingStateShard
+public net.minecraft.client.renderer.RenderStateShard$MultiTextureStateShard
