mark ApexCore as a jarJar dependency

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     compileOnly project(':common')
     modImplementation "xyz.apex.minecraft.apexcore:apexcore-fabric:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}"
+    include "xyz.apex.minecraft.apexcore:apexcore-fabric:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}"
 }
 
 processResources {
