Fix mixins not working in production

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,6 +6,8 @@ loom {
     if(accessWidenerFile.exists()) {
         accessWidenerPath = accessWidenerFile
     }
+
+    mixin.defaultRefmapName = "${MOD_ID}.refmap.json"
 }
 
 repositories {
