--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -7,6 +7,8 @@ loom {
         accessWidenerPath = accessWidenerFile
     }
 
+    mixin.defaultRefmapName = "${MOD_ID}.refmap.json"
+
     runs {
         client {
             client()
