Update to match recent major changes in apexcore
Add `-XX:+AllowEnhancedClassRedefinition` jvm arg to run configs
will require you to install some jdk that supports this jvm arg (jbr-sdk is what I am using)

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -13,11 +13,13 @@ loom {
         client {
             client()
             ideConfigGenerated true
+            vmArg '-XX:+AllowEnhancedClassRedefinition'
         }
 
         server {
             server()
             ideConfigGenerated true
+            vmArg '-XX:+AllowEnhancedClassRedefinition'
         }
     }
 }
