Fix issues related to publishing remapped 'common' jars
Add '_DEV_' ApexCore version marker

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,7 @@ FABRIC_API_VERSION=0.83.0
 # ApexCore
 APEXCORE_ID=apexcore
 APEXCORE_VERSION=9.0.0
+APEXCORE_DEV_VERSION=9.0.1
 APEXCORE_VERSION_RANGE=[9.0.0,10.0.0)
 
 # Dependencies
