--- a/platforms/common/build.gradle
+++ b/platforms/common/build.gradle
@@ -32,14 +32,25 @@ dependencies {
 
     compileOnly "org.spongepowered:mixin:${MIXIN_VERSION}"
 
-    modImplementation "xyz.apex.minecraft.apexcore:apexcore-common:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
+    if(rootProject.hasProperty('APEXCORE_DEV_VERSION')) {
+        modImplementation "xyz.apex.minecraft.apexcore:apexcore-common:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}"
+    } else {
+        modImplementation "xyz.apex.minecraft.apexcore:apexcore-common:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
+    }
 
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
     compileOnly 'com.google.errorprone:error_prone_annotations:2.11.0'
 }
 
+remapJar.enabled = false
+remapSourcesJar.enabled = false;
+
+jar {
+    archiveClassifier = ''
+}
+
 collectJars {
-    def tasks = [ remapJar, remapSourcesJar ]
+    def tasks = [ jar, sourcesJar ]
     dependsOn tasks
     from tasks
 }
@@ -49,7 +60,7 @@ publishing {
         mavenJava(MavenPublication) {
             loom.disableDeprecatedPomGeneration(it)
 
-            artifact remapJar
+            artifact jar
             artifact sourcesJar
         }
     }
