--- a/platforms/fabric/build.gradle
+++ b/platforms/fabric/build.gradle
@@ -52,7 +52,11 @@ dependencies {
 
     compileOnly project(path: ':common', configuration: 'namedElements')
 
-    modImplementation "xyz.apex.minecraft.apexcore:apexcore-fabric:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
+    if(rootProject.hasProperty('APEXCORE_DEV_VERSION')) {
+        modImplementation "xyz.apex.minecraft.apexcore:apexcore-fabric:${APEXCORE_DEV_VERSION}+${MINECRAFT_VERSION}"
+    } else {
+        modImplementation "xyz.apex.minecraft.apexcore:apexcore-fabric:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
+    }
 
     if(rootProject.hasProperty('DEVLOGIN_VERSION')) {
         localRuntime "net.covers1624:DevLogin:${DEVLOGIN_VERSION}"
